Render react components on index, accept views

--- a/app/views/invites/index.html.erb
+++ b/app/views/invites/index.html.erb
@@ -1,214 +1,11 @@
-<%= boss_dashboard do %>
-  <div class="boss-page-dashboard boss-page-dashboard_updated">
-    <div class="boss-page-dashboard__group">
-      <h1 class="boss-page-dashboard__title">Invites</h1>
-      <div class="boss-page-dashboard__buttons-group">
-        <%= link_to('Invite new user', new_invite_path, class: ['boss-button boss-button_role_add boss-page-dashboard__button']) %>
-      </div>
-    </div>
-    <div class="boss-page-dashboard__filter">
-      <div class="boss-dropdown boss-dropdown__content_state_opened">
-        <div class="boss-dropdown__header">
-          <span id="js-filter-button" class="boss-dropdown__switch boss-dropdown__switch_role_filter boss-dropdown__switch_state_opened">
-            Filter
-          </span>
-        </div>
-        <div id="js-filter" data-show="<%= params[:filter].present? %>" class="boss-dropdown__content">
-          <div class="boss-dropdown__content-inner">
-            <%= boss_form_for(
-                  'filter',
-                  url: invites_path,
-                  html: { method: :get, class: 'boss-form' }
-              ) do |form| %>
-              <div class="boss-form__row boss-form__row_position_last">
-                <div class="boss-form__group boss-form__group_layout_max">
-                  <div class="boss-form__row boss-form__row_position_last">
-                    <div class="boss-form__field boss-form__field_layout_half">
-                      <%= form.select(
-                        :status,
-                        options_for_select(
-                          InviteStateMachine.states.map{ |status| [status.titlecase, status] },
-                          filter.status.to_s
-                        ),
-                        prompt: 'Any',
-                        label: 'Status',
-                      ) %>
-                    </div>
-                    <div class="boss-form__field boss-form__field_layout_half">
-                      <%= form.select(
-                        :role,
-                        options_for_select(
-                          User::ROLES.map{ |role| [role.titlecase, role] },
-                          filter.role.to_s
-                        ),
-                        prompt: 'Any',
-                        label: 'Role',
-                      ) %>
-                    </div>
-                  </div>
-                </div>
-                <div class="boss-form__group boss-form__group_layout_fluid">
-                  <div class="boss-form__field boss-form__field_justify_end boss-form__field_no-label">
-                    <%= form.submit('Update', class: 'boss-button boss-form__submit boss-form__submit_adjust_single') %>
-                  </div>
-                </div>
-              </div>
-            <% end %>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-<% end %>
-
-<%= boss_main_content do %>
-  <% if invites.present? %>
-    <div class="boss-page-main__group boss-page-main__group_adjust_invites-table">
-      <div class="boss-table boss-table_page_invites-index">
-        <div class="boss-table__row">
-          <div class="boss-table__cell boss-table__cell_role_header">Email</div>
-          <div class="boss-table__cell boss-table__cell_role_header">Role</div>
-          <div class="boss-table__cell boss-table__cell_role_header">Venues</div>
-          <div class="boss-table__cell boss-table__cell_role_header">Status</div>
-          <div class="boss-table__cell boss-table__cell_role_header">Inviter</div>
-          <div class="boss-table__cell boss-table__cell_role_header">Invited At</div>
-          <div class="boss-table__cell boss-table__cell_role_header"></div>
-        </div>
-        <% invites.each do |invite| %>
-          <div class="boss-table__row" data-invite-id="<%= invite.id %>">
-            <% if invite.email_bounced_data.present? %>
-              <%= table_cell('Email') do %>
-                <button
-                  bounced-email
-                  data-bounced-email="<%= invite.email_bounced_data["email"] %>"
-                  data-bounced-reason="<%= invite.email_bounced_data["reason"] %>"
-                  data-bounced-error-code="<%= invite.email_bounced_data["error_code"] %>"
-                  data-bounced-at="<%= invite.email_bounced_data["bounced_at"] %>"
-                  data-bounced-updated-at="<%= invite.email_bounced_data["updated_at"] %>"
-                  class="boss-table__text boss-table__text_role_alert-action boss-table__text_adjust_wrap"
-                ><%= invite.email %></button>
-              <% end %>
-            <% else %>
-              <%= table_cell_text('Email') { invite.email } %>
-            <% end %>
-            <%= table_cell_text('Role') { invite.role.titleize } %>
-            <%= table_cell_text('Venues') do %>
-              <% if invite.role == User::MANAGER_ROLE %>
-                <% venues = invite.venue_ids.map { |id| Venue.find_by(id: id) }.compact %>
-                <%= venues.map(&:name).to_sentence %>
-              <% else %>
-                All
-              <% end %>
-            <% end %>
-            <%= table_cell_text('Status') { invite.current_state.titleize } %>
-            <%= table_cell_text('Inviter') { invite.inviter.full_name.titlecase } %>
-            <%= table_cell_text('Invited At') { invite.created_at.to_s(:human_date) } %>
-            <%= table_cell_action('Action') do %>
-              <% if invite.can_transition_to?(:revoked) %>
-                <%= button_to 'Revoke', revoke_invite_path(invite), class: 'boss-button boss-button_role_cancel boss-button_type_small boss-table__action' %>
-              <% end %>
-            <% end %>
-          </div>
-        <% end %>
-      </div>
-
-      <% invites.each do |invite| %>
-        <div class="boss-check boss-check_role_board boss-check_page_invites-index">
-          <div class="boss-check__row">
-            <div class="boss-check__cell">
-              <h3 class="boss-check__title boss-check__title_adjust_wrap">
-                <% if invite.email_bounced_data.present? %>
-                  <button
-                    bounced-email
-                    data-bounced-email="<%= invite.email_bounced_data["email"] %>"
-                    data-bounced-reason="<%= invite.email_bounced_data["reason"] %>"
-                    data-bounced-error-code="<%= invite.email_bounced_data["error_code"] %>"
-                    data-bounced-at="<%= invite.email_bounced_data["bounced_at"] %>"
-                    data-bounced-updated-at="<%= invite.email_bounced_data["updated_at"] %>"
-                    class="boss-table__text boss-table__text_role_alert-action boss-table__text_adjust_wrap"
-                  ><%= invite.email %></button>
-                <% else %>
-                  <%= invite.email %>
-                <% end %>
-              </h3>
-            </div>
-          </div>
-          <div class="boss-check__row boss-check__row_marked">
-            <div class="boss-check__info-table">
-              <div class="boss-check__info-row">
-                <div class="boss-check__info-cell">
-                  <p class="boss-check__text">Role</p>
-                </div>
-                <div class="boss-check__info-cell">
-                  <p class="boss-check__text boss-check__text_role_primary"><%= invite.role.titleize %></p>
-                </div>
-              </div>
-              <div class="boss-check__info-row">
-                <div class="boss-check__info-cell">
-                  <p class="boss-check__text">Venues</p>
-                </div>
-                <div class="boss-check__info-cell">
-                  <p class="boss-check__text boss-check__text_role_primary">
-                    <% if invite.role == User::MANAGER_ROLE %>
-                      <% venues = invite.venue_ids.map { |id| Venue.find_by(id: id) }.compact %>
-                      <%= venues.map(&:name).to_sentence %>
-                    <% else %>
-                      All
-                    <% end %>
-                  </p>
-                </div>
-              </div>
-
-              <div class="boss-check__info-row">
-                <div class="boss-check__info-cell">
-                  <p class="boss-check__text">Status</p>
-                </div>
-                <div class="boss-check__info-cell">
-                  <p class="boss-check__text boss-check__text_role_primary"><%= invite.current_state.titleize %></p>
-                </div>
-              </div>
-              <div class="boss-check__info-row">
-                <div class="boss-check__info-cell">
-                  <p class="boss-check__text">Inviter</p>
-                </div>
-                <div class="boss-check__info-cell">
-                  <p class="boss-check__text boss-check__text_role_primary boss-check__text_role_user"><%= invite.inviter.full_name.titlecase %></p>
-                </div>
-              </div>
-              <div class="boss-check__info-row">
-                <div class="boss-check__info-cell">
-                  <p class="boss-check__text">Invited At</p>
-                </div>
-                <div class="boss-check__info-cell">
-                  <p class="boss-check__text boss-check__text_role_primary boss-check__text_role_date"><%= invite.created_at.to_s(:human_date) %></p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="boss-check__row boss-check__row_role_buttons">
-            <% if invite.can_transition_to?(:revoked) %>
-              <%= button_to 'Revoke', revoke_invite_path(invite), class: 'boss-button boss-button_role_cancel boss-button_type_small boss-table__action' %>
-            <% end %>
-          </div>
-        </div>
-      <% end %>
-    </div>
-  <% end %>
-  <%= render partial: 'shared/pagination_control_v2', locals: { relation: invites } %>
-<% end %>
-
-<script>
-  (function($) {
-    $(function() {
-      $('#js-filter-button').on('click', function() {
-        $('#js-filter').toggleClass('boss-dropdown__content_state_opened');
-        $(this).toggleClass('boss-dropdown__switch_state_opened');
-        $(this).closest('.boss-dropdown').toggleClass('boss-dropdown__content_state_opened');
-      });
-      
-      if ($('#js-filter').data('show')) {
-        $('#js-filter-button').click();
-      }
-    })
-  }(jQuery))
-</script>
+<%= react_component('InvitesApp', {
+  accessToken: access_token,
+  invites: ActiveModel::Serializer::CollectionSerializer.new(
+    invites,
+    serializer: Api::V1::Invites::InviteSerializer,
+  ),
+  venues: ActiveModel::Serializer::CollectionSerializer.new(
+    venues,
+    serializer: Api::V1::SecurityRota::VenueSerializer,
+  )
+}) %>
