--- a/app/views/safe_checks/index.html.erb
+++ b/app/views/safe_checks/index.html.erb
@@ -229,7 +229,7 @@
               <div class="boss-check__cell boss-check__cell_role_table">
                 <p class="boss-check__text">
                   <%= number_to_currency(
-                    safe_check.pound_value_for(:out_to_order_cents) - (safe_check.pound_value_for(:ash_cash_cents) + safe_check.pound_value_for(:security_plus_cents)),
+                    safe_check.pound_value_for(:out_to_order_cents),
                     unit: '£',
                     precision: 2
                   ) %>
