Add staff vetting same sage id route and action

--- a/app/views/staff_vetting/index.html.erb
+++ b/app/views/staff_vetting/index.html.erb
@@ -7,6 +7,7 @@
   staffWithExpiredSiaBadgeCount: staff_with_expired_sia_badge_count,
   staffOnWrongPayrateCount: staff_on_wrong_payrate_count,
   staffMembersWithBouncedEmailCount: staff_members_with_bounced_email_count,
+  staffWithSameSageIdCount: staff_with_same_sage_id_count,
   venues: ActiveModel::Serializer::CollectionSerializer.new(
     venues,
     serializer: Api::V1::SimpleVenueSerializer
