Add requests count to SecurityRotaOverview page views

--- a/app/views/security_rotas/index.html.erb
+++ b/app/views/security_rotas/index.html.erb
@@ -21,6 +21,7 @@
     staff_types,
     serializer: Api::V1::SecurityRota::StaffTypeSerializer,
   ),
+  securityShiftRequestsCount: security_shift_requests_count,
   startDate: UIRotaDate.format(start_date),
   endDate: UIRotaDate.format(end_date),
 }) %>
