--- a/app/views/security_rotas/show.html.erb
+++ b/app/views/security_rotas/show.html.erb
@@ -45,4 +45,5 @@
     staff_types,
     serializer: Api::V1::SecurityRota::StaffTypeSerializer,
   ),
+  securityShiftRequestsCount: security_shift_requests_count,
 }) %>
