--- a/app/assets/javascripts/rollbar.js.erb
+++ b/app/assets/javascripts/rollbar.js.erb
@@ -7,6 +7,7 @@ if ((getEnvironment() === "production") || (getEnvironment() === "staging")) {
         accessToken: "<%= ENV.fetch("ROLLBAR_API_ACCESS_TOKEN") %>",
         captureUncaught: true,
         captureUnhandledRejections: true,
+        scrubTelemetryInputs: true,
         payload: {
             environment: getEnvironment(),
             client: {
